--- a/platformics/codegen/templates/api/types/class_name.py.j2
+++ b/platformics/codegen/templates/api/types/class_name.py.j2
@@ -487,7 +487,7 @@ async def create_{{ cls.snake_name }}(
     {%- for field in cls.create_fields %}
         {%- if field.name == "collection_id" %}
     # Validate that the user can create entities in this collection
-    attr = {"collection_id": input.collection_id}
+    attr = {"collection_id": validated.collection_id}
     resource = Resource(id="NEW_ID", kind=db.{{ cls.name }}.__tablename__, attr=attr)
     if not cerbos_client.is_allowed("create", principal, resource):
         raise PlatformicsException("Unauthorized: Cannot create entity in this collection")
@@ -498,8 +498,8 @@ async def create_{{ cls.snake_name }}(
     {%- for field in cls.create_fields %}
         {%- if field.is_entity and not field.is_virtual_relationship %}
     # Check that {{field.name}} relationship is accessible.
-    if input.{{field.name}}_id:
-        {{field.name}} = await get_db_rows(db.{{ field.related_class.name }}, session, cerbos_client, principal, {"id": {"_eq": input.{{field.name}}_id } }, [], CerbosAction.VIEW)
+    if validated.{{field.name}}_id:
+        {{field.name}} = await get_db_rows(db.{{ field.related_class.name }}, session, cerbos_client, principal, {"id": {"_eq": validated.{{field.name}}_id } }, [], CerbosAction.VIEW)
         if not {{field.name}}:
             raise PlatformicsException("Unauthorized: {{field.name}} does not exist")
         {%- endif %}
@@ -527,8 +527,8 @@ async def update_{{ cls.snake_name }}(
     """
     Update {{ cls.name }} objects. Used for mutations (see api/mutations.py).
     """
-    params = input.__dict__
-    validate_input(input, {{cls.name}}UpdateInputValidator)
+    validated = {{cls.name}}UpdateInputValidator(**input.__dict__)
+    params = validated.model_dump()
     
     # Need at least one thing to update
     num_params = len([x for x in params if params[x] is not None])
@@ -539,8 +539,8 @@ async def update_{{ cls.snake_name }}(
     {%- for field in cls.mutable_fields %}
         {%- if field.is_entity and not field.is_virtual_relationship %}
     # Check that {{field.name}} relationship is accessible.
-    if input.{{field.name}}_id:
-        {{field.name}} = await get_db_rows(db.{{ field.related_class.name }}, session, cerbos_client, principal, {"id": {"_eq": input.{{field.name}}_id } }, [], CerbosAction.VIEW)
+    if validated.{{field.name}}_id:
+        {{field.name}} = await get_db_rows(db.{{ field.related_class.name }}, session, cerbos_client, principal, {"id": {"_eq": validated.{{field.name}}_id } }, [], CerbosAction.VIEW)
         if not {{field.name}}:
             raise PlatformicsException("Unauthorized: {{field.name}} does not exist")
         params["{{field.name}}"] = {{field.name}}[0]
@@ -568,8 +568,8 @@ async def update_{{ cls.snake_name }}(
     {%- for field in self.mutable_fields %}
         {%- if field.name == "collection_id" %}
     # Validate that the user has access to the new collection ID
-    if input.collection_id:
-        attr = {"collection_id": input.collection_id}
+    if validated.collection_id:
+        attr = {"collection_id": validated.collection_id}
         resource = Resource(id="SOME_ID", kind=db.{{ cls.name }}.__tablename__, attr=attr)
         if not cerbos_client.is_allowed(CerbosAction.UPDATE, principal, resource):
             raise PlatformicsException("Unauthorized: Cannot access new collection")
