[CZID-9006] Entity deletion (#189)
* Add file event

* Codegen: add cascade deletion in DB models

* Remove deleted_at from workflows

* Set separate path on S3 for files managed by NextGen

* Update test schema

* Add test for cascade deletions

* Re-run codegen

--- a/platformics/codegen/templates/database/models/class_name.py.j2
+++ b/platformics/codegen/templates/database/models/class_name.py.j2
@@ -63,16 +63,45 @@ class {{cls.name}}(Entity):
         {%- elif attr.type == "date" %}
     {{attr.name}}: Mapped[datetime.datetime] = mapped_column(DateTime, nullable={{ "False" if attr.required else "True"}}{%- if attr.indexed%}, index=True{%- endif %})
         {%- else %}
+            {%- if attr.is_cascade_delete -%}
+                {%- if attr.type == "File" -%}
+                    {% set cascade = 'cascade="all, delete-orphan", single_parent=True, post_update=True' %}
+                {%- else -%}
+                    {% set cascade = 'cascade="all, delete-orphan"' %}
+                {%- endif -%}
+            {%- else -%}
+                {% set cascade = "" %}
+            {%- endif -%}
             {%- if attr.is_virtual_relationship %}
-                {%- if attr.multivalued %}
-    {{attr.name}}: Mapped[list[{{attr.type}}]] = relationship("{{attr.type}}", back_populates="{{attr.inverse_field}}", uselist=True, foreign_keys="{{attr.type}}.{{attr.inverse_field}}_id")
-                {%- else %}
-    {{attr.name}}: Mapped[{{attr.type}}] = relationship("{{attr.type}}", back_populates="{{attr.inverse_field}}", uselist=True, foreign_keys="{{attr.type}}.{{attr.inverse_field}}_id")
-                {%- endif %}
+    {{attr.name}}: Mapped[
+        {{ "list[" if attr.multivalued else ""}}{{ attr.type }}{{ "]" if attr.multivalued else ""}}
+    ] = relationship(
+        "{{attr.type}}",
+        back_populates="{{attr.inverse_field}}",
+        uselist=True,
+        foreign_keys="{{attr.type}}.{{attr.inverse_field}}_id",
+        {{cascade}}
+    )
             {%- else %}
-    {{attr.name}}_id: Mapped[uuid.UUID] = mapped_column(UUID, ForeignKey("{{attr.related_class.snake_name}}.{{attr.related_class.identifier}}"), nullable={{"False" if attr.required else "True"}}{%- if attr.identifier %}, primary_key=True{%- else %}, index=True{%- endif %})
+    {{attr.name}}_id: Mapped[uuid.UUID] = mapped_column(
+        UUID,
+        ForeignKey("{{attr.related_class.snake_name}}.{{attr.related_class.identifier}}"),
+        nullable={{"False" if attr.required else "True"}},
+        {%- if attr.identifier %}
+        primary_key=True,
+        {%- else %}
+        index=True,
+        {%- endif %}
+    )
               {%- if attr.type != "Entity" %}
-    {{attr.name}}: Mapped["{{attr.type}}"] = relationship("{{attr.type}}",{%- if attr.inverse %} back_populates="{{attr.inverse_field}}",{%- endif %} foreign_keys={{attr.name}}_id)
+    {{attr.name}}: Mapped["{{attr.type}}"] = relationship(
+        "{{attr.type}}",
+        foreign_keys={{attr.name}}_id,
+        {%- if attr.inverse %}
+        back_populates="{{attr.inverse_field}}",
+        {%- endif %}
+        {{cascade}}
+    )
               {%- endif %}
             {%- endif %}
         {%- endif %}
