--- a/platformics/codegen/templates/api/types/class_name.py.j2
+++ b/platformics/codegen/templates/api/types/class_name.py.j2
@@ -577,7 +577,9 @@ async def update_{{ cls.snake_name }}(
     {%- endfor %}
 
     # Update DB
+    updated_at = datetime.datetime.now()
     for entity in entities:
+        entity.updated_at = updated_at
         for key in params:
             if params[key] is not None:
                 setattr(entity, key, params[key])
