--- a/platformics/codegen/templates/api/helpers/class_name.py.j2
+++ b/platformics/codegen/templates/api/helpers/class_name.py.j2
@@ -10,7 +10,6 @@ Make changes to the template codegen/templates/api/groupby_helpers.py.j2 instead
 from typing import Any, Optional
 import strawberry
 import datetime
-import enum
 import uuid
 
 {%- for field in cls.enum_fields %}
@@ -23,20 +22,29 @@ from support.enums import
 {%- endfor %}
 
 {%- for field in cls.related_fields %}
-    {%- if field.related_class.name not in ignored_fields and not field.multivalued %}
+    {%- if field.related_class.name not in ignored_fields and not field.multivalued and not field.is_virtual_relationship %}
 from api.helpers.{{ field.related_class.snake_name }} import {{ field.related_class.name }}GroupByOptions, build_{{ field.related_class.snake_name }}_groupby_output
     {%- endif %}
 {%- endfor %}
 
+"""
+Define groupby options for {{ cls.name }} type.
+These are only used in aggregate queries.
+"""
+
 @strawberry.type
 class {{ cls.name }}GroupByOptions:
 {%- for attr in cls.visible_fields %}
-    {%- if attr.type != "File" and not attr.multivalued %}
+    {%- if attr.type != "File" and not attr.multivalued and not attr.is_virtual_relationship %}
         {%- if attr.inverse %}
     {{ attr.name }}: Optional[{{ attr.related_class.name }}GroupByOptions] = None
+        {%- elif attr.type == cls.name %}
+    {{ attr.name }}: Optional["{{ cls.name }}GroupByOptions"] = None
         {%- else %}
             {%- if attr.type == "string" %}
     {{ attr.name }}: Optional[str] = None
+            {%- elif attr.type == "integer" %}
+    {{ attr.name }}: Optional[int] = None
             {%- elif attr.type == "date" %}
     {{ attr.name }}: Optional[datetime.datetime] = None
             {%- elif attr.type == "boolean" %}
@@ -45,7 +53,6 @@ class {{ cls.name }}GroupByOptions:
     {{ attr.name }}: Optional[uuid.UUID] = None
             {%- elif attr.type == "Array2dInt" %}
     {{ attr.name }}: Optional[list[list[int]]] = None
-    {# todo enums #}
             {%- else %}
     {{ attr.name }}: Optional[{{ attr.type }}] = None
             {%- endif %}
@@ -59,13 +66,17 @@ def build_{{ cls.snake_name }}_groupby_output(
     keys: list[str],
     value: Any,
 ) -> {{ cls.name }}GroupByOptions:
+    """
+    Given a list of (potentially nested) fields representing the key of a groupby query and the value,
+    build the proper groupby object.
+    """
     if not group_object:
         group_object = {{ cls.name }}GroupByOptions()
 
     key = keys.pop(0)
     match key:
 {%- for attr in cls.visible_fields %}
-    {%- if attr.type != "File" and not attr.multivalued %}
+    {%- if attr.type != "File" and not attr.multivalued and not attr.is_virtual_relationship %}
         {%- if attr.inverse %}
         case "{{ attr.related_class.snake_name }}":
             if getattr(group_object, key):
@@ -84,6 +95,7 @@ def build_{{ cls.snake_name }}_groupby_output(
     {%- endif %}
 {%- endfor %}
         case _:
-            pass # TODO: log warning/error if key is not recognized
+            if key not in group_object.__annotations__:
+                raise Exception(f"Unknown groupby key: {key}")
     setattr(group_object, key, value)
     return group_object
