--- a/platformics/codegen/templates/api/types/class_name.py.j2
+++ b/platformics/codegen/templates/api/types/class_name.py.j2
@@ -135,7 +135,7 @@ async def load_{{ related_field.related_class.snake_name }}_aggregate_rows(
     # Aggregate queries always return a single row, so just grab the first one
     result = rows[0] if rows else None
     aggregate_output = format_{{ related_field.related_class.snake_name }}_aggregate_output(result)
-    return {{ related_field.related_class.name }}Aggregate(aggregate=aggregate_output)
+    return aggregate_output
         {%- endif %}
 
     {%- endif %}
@@ -421,6 +421,8 @@ def format_{{ cls.snake_name }}_aggregate_output(query_results: list[RowMapping]
     format the results using the proper GraphQL types.
     """
     aggregate = []
+    if not query_results is list:
+        query_results = [query_results]
     for row in query_results:
         aggregate.append(format_{{ cls.snake_name }}_aggregate_row(row))
     return {{ cls.name }}Aggregate(aggregate=aggregate)
