--- a/platformics/codegen/templates/api/types/class_name.py.j2
+++ b/platformics/codegen/templates/api/types/class_name.py.j2
@@ -415,14 +415,14 @@ async def resolve_{{ cls.plural_snake_name }}(
     return await get_db_rows(db.{{ cls.name }}, session, cerbos_client, principal, where, order_by)  # type: ignore
 
 
-def format_{{ cls.snake_name }}_aggregate_output(query_results: list[RowMapping]) -> {{ cls.name }}Aggregate:
+def format_{{ cls.snake_name }}_aggregate_output(query_results: Sequence[RowMapping] | RowMapping) -> {{ cls.name }}Aggregate:
     """
     Given a row from the DB containing the results of an aggregate query,
     format the results using the proper GraphQL types.
     """
     aggregate = []
     if not type(query_results) is list:
-        query_results = [query_results]
+        query_results = [query_results] # type: ignore
     for row in query_results:
         aggregate.append(format_{{ cls.snake_name }}_aggregate_row(row))
     return {{ cls.name }}Aggregate(aggregate=aggregate)
