fix default types and raise PlatformicsException

--- a/platformics/codegen/templates/api/types/class_name.py.j2
+++ b/platformics/codegen/templates/api/types/class_name.py.j2
@@ -478,7 +478,7 @@ async def resolve_{{ cls.plural_snake_name }}_aggregate(
     groupby_selections = groupby_selections[0].selections if groupby_selections else []
 
     if not aggregate_selections:
-        raise Exception("No aggregate functions selected")
+        raise PlatformicsException("No aggregate functions selected")
 
     rows = await get_aggregate_db_rows(db.{{ cls.name }}, session, cerbos_client, principal, where, aggregate_selections, [], groupby_selections)  # type: ignore
     aggregate_output = format_{{ cls.snake_name }}_aggregate_output(rows)
