--- a/platformics/codegen/templates/api/validators/class_name.py.j2
+++ b/platformics/codegen/templates/api/validators/class_name.py.j2
@@ -65,6 +65,8 @@ from typing_extensions import Annotated
     {{ attr.name }}: Annotated[{{ getTypeValidation(action, "int", attr.required) }}, Field({{getNumericConstraints(attr)}})]
         {%- elif attr.type == "float" %}
     {{ attr.name }}: Annotated[{{ getTypeValidation(action, "float", attr.required) }}, Field({{getNumericConstraints(attr)}})]
+        {%- elif attr.type == "Array2dFloat" %}
+    {{ attr.name }}: Annotated[{{ getTypeValidation(action, "list[list[float]]", attr.required) }}, Field()]
         {%- elif attr.is_enum %}
     {{ attr.name }}: Annotated[{{ getTypeValidation(action, attr.type, attr.required) }}, Field()]
         {%- elif attr.type == "boolean" %}
