--- a/platformics/codegen/templates/test_infra/factories/class_name.py.j2
+++ b/platformics/codegen/templates/test_infra/factories/class_name.py.j2
@@ -78,7 +78,7 @@ class {{ cls.name }}Factory(CommonFactory):
                 {%- elif field.type == "string" %}
     {{ field.name }} = fuzzy.FuzzyText()
                 {%- elif field.type == "Array2dFloat" %}
-    {{ field.name }} = factory.LazyAttribute(lambda o: [ [fuzzy.FuzzyFloat(1, 100) for _ in range(5)] ] * random.randint(2, 5) )
+    {{ field.name }} = factory.LazyAttribute(lambda o: [ [random.uniform(1, 100) for _ in range(5)] ] * random.randint(2, 5) )
                 {%- elif field.type == "integer" %}
     {{ field.name }} = fuzzy.FuzzyInteger(1, 1000)
                 {%- elif field.type == "float" %}
