--- a/platformics/codegen/templates/api/types/class_name.py.j2
+++ b/platformics/codegen/templates/api/types/class_name.py.j2
@@ -43,6 +43,7 @@ from sqlalchemy.ext.asyncio import AsyncSession
 from strawberry import relay
 from strawberry.field import StrawberryField
 from strawberry.types import Info
+from support.limit_offset import LimitOffsetClause
 from typing_extensions import TypedDict
 import enum
 
@@ -54,6 +55,7 @@ from support.enums import
     {{- field.type}}
     {{- "," if not loop.last else "" }}
 {%- endfor %}
+
 
 E = typing.TypeVar("E", db.File, db.Entity)
 T = typing.TypeVar("T")
@@ -406,11 +408,16 @@ async def resolve_{{ cls.plural_snake_name }}(
     principal: Principal = Depends(require_auth_principal),
     where: Optional[{{ cls.name }}WhereClause] = None,
     order_by: Optional[list[{{ cls.name }}OrderByClause]] = [],
+    limit_offset: Optional[LimitOffsetClause] = None,
 ) -> typing.Sequence[{{ cls.name }}]:
     """
     Resolve {{ cls.name }} objects. Used for queries (see api/queries.py).
     """
-    return await get_db_rows(db.{{ cls.name }}, session, cerbos_client, principal, where, order_by)  # type: ignore
+    limit = limit_offset["limit"] if limit_offset and "limit" in limit_offset else None
+    offset = limit_offset["offset"] if limit_offset and "offset" in limit_offset else None
+    if offset and not limit:
+        raise PlatformicsException("Cannot use offset without limit")
+    return await get_db_rows(db.{{ cls.name }}, session, cerbos_client, principal, where, order_by, CerbosAction.VIEW, limit, offset)  # type: ignore
 
 
 def format_{{ cls.snake_name }}_aggregate_output(query_results: Sequence[RowMapping] | RowMapping) -> {{ cls.name }}Aggregate:
@@ -464,6 +471,7 @@ async def resolve_{{ cls.plural_snake_name }}_aggregate(
     cerbos_client: CerbosClient = Depends(get_cerbos_client),
     principal: Principal = Depends(require_auth_principal),
     where: Optional[{{ cls.name }}WhereClause] = None,
+    # TODO: add support for groupby, limit/offset
 ) -> {{ cls.name }}Aggregate:
     """
     Aggregate values for {{ cls.name }} objects. Used for queries (see api/queries.py).
