make collection_ids nullable

--- a/entities/entities_templates/cerbos/policies/bulk_download.yaml.j2
+++ b/entities/entities_templates/cerbos/policies/bulk_download.yaml.j2
@@ -9,7 +9,7 @@ resourcePolicy:
     - actions: ['*']
       effect: EFFECT_ALLOW
       derivedRoles:
-        - owner
+        - bulk_download_owner
   schemas:
     principalSchema:
       ref: cerbos:///principal.json
