--- a/platformics/codegen/templates/api/types/class_name.py.j2
+++ b/platformics/codegen/templates/api/types/class_name.py.j2
@@ -524,7 +524,7 @@ async def create_{{ cls.snake_name }}(
     {%- for field in cls.create_fields %}
         {%- if field.name == "collection_id" %}
     # Validate that the user can create entities in this collection
-    attr = {"collection_id": validated.collection_id, "owner_user_id": principal.id}
+    attr = {"collection_id": validated.collection_id, "owner_user_id": int(principal.id)}
     resource = Resource(id="NEW_ID", kind=db.{{ cls.name }}.__tablename__, attr=attr)
     if not cerbos_client.is_allowed("create", principal, resource):
         raise PlatformicsException("Unauthorized: Cannot create entity in this collection")
